--- a/MarkBalisi.SecondQuarterlyExam/MarkBalisi.SecondQuarterlyExam/MainWindow.xaml
+++ b/MarkBalisi.SecondQuarterlyExam/MarkBalisi.SecondQuarterlyExam/MainWindow.xaml
@@ -7,6 +7,7 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        
+        <DataGrid x:Name="dtgNews" HorizontalAlignment="Left" Height="399" Margin="10,10,0,0" VerticalAlignment="Top" Width="611" SelectionChanged="DataGrid_SelectionChanged"/>
+
     </Grid>
 </Window>
