Added a public class named News.

--- a/MarkBalisi.SecondQuarterlyExam/MarkBalisi.SecondQuarterlyExam/MainWindow.xaml
+++ b/MarkBalisi.SecondQuarterlyExam/MarkBalisi.SecondQuarterlyExam/MainWindow.xaml
@@ -7,7 +7,10 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        <DataGrid x:Name="dtgNews" HorizontalAlignment="Left" Height="399" Margin="10,10,0,0" VerticalAlignment="Top" Width="611" SelectionChanged="DataGrid_SelectionChanged"/>
-
+        <DataGrid x:Name="dtgNews" HorizontalAlignment="Left" Height="399" Margin="10,10,0,0" VerticalAlignment="Top" Width="772" SelectionChanged="dtgNews_SelectionChanged">
+            <DataGrid.Columns>
+                <DataGridTextColumn/>
+            </DataGrid.Columns>
+        </DataGrid>
     </Grid>
 </Window>
